test/trivial/bradc/redefinevar.good
Error: 'x' has multiple definitions, redefined at:
  redefinevar.chpl:2 (redefinevar.chpl:1)
